add update and delete routes

--- a/src/Gummybear/Views/Home/Index.cshtml
+++ b/src/Gummybear/Views/Home/Index.cshtml
@@ -1,1 +1,14 @@
-﻿<h1>Splash</h1>
+﻿
+
+@{
+    ViewData["Title"] = "Home";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
+
+    <div class="sleepybear">
+        <img src="~/img/sleepybear.png" alt="a sleepy gummybear" />
+    </div>
+
+
+
+
