--- a/src/Gummybear/Views/Products/Index.cshtml
+++ b/src/Gummybear/Views/Products/Index.cshtml
@@ -1,15 +1,18 @@
 ﻿@model IEnumerable<Gummybear.Models.Product>
 
 @{
-    ViewData["Title"] = "Travel Blog";
+    ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div>
+<div class="shop">
     <h2>Products</h2>
     @foreach(var product in Model)
     {
-        <p>@Html.DisplayFor(modelItem => product.Name)</p>
+        <p>@Html.DisplayFor(model => product.Name) |
+            @Html.ActionLink("Details", "Details", new { id = product.ProductId }) |
+            @Html.ActionLink("Edit", "Edit", new { id = product.ProductId })
+        </p>
     }
 
     <p>@Html.ActionLink("Add new item", "Create")</p>
