--- a/src/Gummybear/Views/Shared/_Layout.cshtml
+++ b/src/Gummybear/Views/Shared/_Layout.cshtml
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-
+    <link rel="icon" type="image/x-icon" href="~/img/favicon.ico" />
     <link href="~/css/bootstrap.min.css" type="text/css" rel="stylesheet" />
     <link href="~/css/styles.css" type="text/css" rel="stylesheet" />
     <meta name="viewport" content="width=device-width" />
@@ -14,15 +14,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        @*@Html.ActionLink("Locations", "Index", "Locations")*@
+                        @Html.ActionLink("Shop", "Index", "Products")
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     </li>
                     <li class="nav-item">
-                        @*@Html.ActionLink("Experiences", "Index", "Experiences")*@
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    </li>
-                    <li class="nav-item">
-                        @*@Html.ActionLink("People", "Index", "People")*@
+                        <a href="@Url.Action("Index", "Home")">
+                            <img class="navbear" src="~/img/navbear.png" alt="a pink bear">
+                        </a>
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     </li>
                 </ul>
