adjust images and fix detail routing

--- a/src/Gummybear/Views/Products/Create.cshtml
+++ b/src/Gummybear/Views/Products/Create.cshtml
@@ -16,6 +16,9 @@
         @Html.LabelFor(model => model.CountryOfOrigin)
         @Html.TextBoxFor(model => model.CountryOfOrigin)
 
+        @Html.LabelFor(model => model.Picture)
+        @Html.TextBoxFor(model => model.Picture)
+
 
         <input type="submit" value="add" />
     }
