--- a/src/Gummybear/Views/Shared/_Layout.cshtml
+++ b/src/Gummybear/Views/Shared/_Layout.cshtml
@@ -18,9 +18,18 @@
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     </li>
                     <li class="nav-item">
+                        @Html.ActionLink("Make New", "Create")
+                        
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    </li>
+                    <li class="nav-item navbear">
                         <a href="@Url.Action("Index", "Home")">
                             <img class="navbear" src="~/img/navbear.png" alt="a pink bear">
                         </a>
+                        <p class="title">GUMMYBEAR WORLD</p>
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     </li>
                 </ul>
