--- a/src/Gummybear/wwwroot/CSS/Styles.css
+++ b/src/Gummybear/wwwroot/CSS/Styles.css
@@ -14,18 +14,31 @@ ul {
 
 
 
-img.navbear {
+.navbear {
     height: 60px;
-    align-items: center;
+    padding-right: 50px;
     
 }
 
 .sleepybear {
     padding-left: -220px;
     height: 50%;
+   
+
+}
+
+.picture img {
+    height: 300px;
+    background-size: contain;
 
 }
 
 .shop {
-    background
+    display: inline-flex;
+}
+
+p.title {
+    font-size: 14px;
+    font-family:'Comic Sans MS';
+    color: darkolivegreen;
 }
