add Delete route

--- a/src/Gummybear/Views/Products/Details.cshtml
+++ b/src/Gummybear/Views/Products/Details.cshtml
@@ -12,7 +12,8 @@
     <p>@Html.DisplayNameFor(model => model.Cost): $ @Html.DisplayFor(model => model.Cost)</p>
     <p>Made in:  @Html.DisplayFor(model => model.CountryOfOrigin)</p>
     <p>
-        @Html.ActionLink("Edit", "Edit", new { id = Model.ProductId })
+        @Html.ActionLink("Edit", "Edit", new { id = Model.ProductId }) |
+        @Html.ActionLink("Delete", "Delete", new { id = Model.ProductId })
     </p>
 
 
