--- a/src/Gummybear/Views/Index.cshtml
+++ b/src/Gummybear/Views/Index.cshtml
@@ -2,3 +2,5 @@
     ViewData["Title"] = "Travel Blog";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
+<p class="splash-text">Shop***************************************************************************************************************************************</p>
