--- a/src/Gummybear/wwwroot/CSS/Styles.css
+++ b/src/Gummybear/wwwroot/CSS/Styles.css
@@ -28,8 +28,9 @@ ul {
 }
 
 .picture img {
-    height: 300px;
+    height: 200px;
     background-size: contain;
+    margin: 30px;
 
 }
 
@@ -51,3 +52,8 @@ p.title {
 body {
     background-color: white;
 }
+
+.nav-item {
+     font-family:'Comic Sans MS';
+}
+
