fix splash page errors, make sleepybear image transparent

--- a/src/Gummybear/Views/Products/Details.cshtml
+++ b/src/Gummybear/Views/Products/Details.cshtml
@@ -17,7 +17,7 @@
 
     <hr />
     <p>@Html.DisplayNameFor(model => model.Cost): $ @Html.DisplayFor(model => model.Cost)</p>
-    <p>Made in:  @Html.DisplayFor(model => model.CountryOfOrigin)</p>
+    <p>Made in:  @Html.DisplayFor(model => model.From)</p>
     <p>
         @Html.ActionLink("Edit", "Edit", new { id = Model.ProductId }) |
         @Html.ActionLink("Delete", "Delete", new { id = Model.ProductId })
