--- a/src/Gummybear/Views/Products/Create.cshtml
+++ b/src/Gummybear/Views/Products/Create.cshtml
@@ -3,24 +3,23 @@
 
     <h2>Create</h2>
     <hr />
-<div></div>
-    <h4>Add a new product</h4>
+<div class="form-group">
     @using (Html.BeginForm())
     {
-        @Html.LabelFor(model => model.Name)
-        @Html.TextBoxFor(model => model.Name)
+        @Html.LabelFor(model => model.Name, ViewData["attributes"])<br />
+        @Html.TextBoxFor(model => model.Name, new { attributes = new { @class = "form-control" } })<br /><br />
 
-        @Html.LabelFor(model => model.Cost)
-        @Html.TextBoxFor(model => model.Cost)
+        @Html.LabelFor(model => model.Cost, ViewData["attributes"])<br />
+        @Html.TextBoxFor(model => model.Cost, new { attributes = new { @class = "form-control" } })<br /><br />
 
-        @Html.LabelFor(model => model.CountryOfOrigin)
-        @Html.TextBoxFor(model => model.CountryOfOrigin)
+        @Html.LabelFor(model => model.From, ViewData["attributes"])<br />
+        @Html.TextBoxFor(model => model.From, new { attributes = new { @class = "form-control" } })<br /><br />
 
-        @Html.LabelFor(model => model.Picture, new {@class="text", type="text", required = "required" }))
-        @Html.TextBoxFor(model => model.Picture)
+        @Html.LabelFor(model => model.Picture, ViewData["attributes"])<br />
+        @Html.TextBoxFor(model => model.Picture, new { attributes = new { @class = "form-control" } })<br /><br />
 
 
-        <input type="submit" value="add" />
+        <input type="submit" value="add" class="btn btn-info" />
     }
     <p>@Html.ActionLink("Back to list", "Index")</p>
 </div>
