--- a/src/Gummybear/Views/Shared/_Layout.cshtml
+++ b/src/Gummybear/Views/Shared/_Layout.cshtml
@@ -15,27 +15,19 @@
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         @Html.ActionLink("Shop", "Index", "Products")
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     </li>
-                    <li class="nav-item">
-                        @Html.ActionLink("Make New", "Create")
-                        
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    </li>
-                    <li class="nav-item navbear">
+                    <li class="nav-item navbear" style="text-indent: 10em;">
                         <a href="@Url.Action("Index", "Home")">
                             <img class="navbear" src="~/img/navbear.png" alt="a pink bear">
                         </a>
                         <p class="title">GUMMYBEAR WORLD</p>
                     </li>
+                    <li style="text-indent: 4em;" class="nav-item">
+                        @Html.ActionLink("Make New", "Create")
+                    </li>
                 </ul>
             </div>
         </nav>
-        <div>
-
             @RenderBody()
         </div>
     </div>
