add picture to delete route

--- a/src/Gummybear/Views/Shared/_Layout.cshtml
+++ b/src/Gummybear/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
                         <a href="@Url.Action("Index", "Home")">
                             <img class="navbear" src="~/img/navbear.png" alt="a pink bear">
                         </a>
-                        <p class="title">GUMMYBEAR WORLD</p>
+                        <p class="title">GUMMYBEAR KINGDOM</p>
                     </li>
                     <li style="text-indent: 4em;" class="nav-item">
                         @Html.ActionLink("Make New", "Create")
