--- a/src/Gummybear/Views/Products/Delete.cshtml
+++ b/src/Gummybear/Views/Products/Delete.cshtml
@@ -4,11 +4,13 @@
 <h2>Are you sure you want to delete this?</h2>
 <hr />
 
-@Html.DisplayFor(model => model.Name)
+<h3>@Html.DisplayFor(model => model.Name)</h3>
+<br />
+<img id="giant-bear" src="@Html.DisplayFor(model => model.Picture)" />
 
 @using (Html.BeginForm())
 {
-    <input type="submit" value="Delete" class="btn"/>
+    <input type="submit" value="Delete" class="btn btn-info"/>
 }
 
 @Html.ActionLink("Back to List", "Index")
